# fkfs

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.org  arduino-libraries  build.gradle  fkfs.cpp  fkfs.h  fkfs_log.cpp  fkfs_log.h  main.ino  read.go  sd_raw.cpp  sd_raw.h  sd_raw_dma.cpp  sd_raw_dma.h  sd_raw_internal.h  settings.gradle  verify.py
examples/dma/: CMakeLists.txt  arduino-libraries  build.gradle  dma.ino  dma_example.ino  main.cpp
examples/simple/: CMakeLists.txt  arduino-libraries  build.gradle  dependencies.cmake  main.cpp  main.ino
src/: read.go
test/linux/: CMakeLists.txt
test/linux/testcommon/: CMakeLists.txt  test_basic.cpp  test_basic.h
test/linux/testhal/: Arduino.h  CMakeLists.txt
test/linux/testhal/avr/: pgmspace.h
testing/: Arduino.h  CMakeLists.txt  hal.cpp  hal.h  read.cpp  test.cpp
